# LLM-Moral-Sycophancy-A-Behavioral-Study

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/: models.json
data/humanLabel/: README.md
data/humanLabel/raw/: aita_transform_to_seed.ipynb
data/humanLabel/reviews/: aita_reviews.jsonl  analyze_disagreements.ipynb  bin_disagreements_human_reviewers.csv  final_consensus_export.csv  human_reviewer_agreement.ipynb  intercoder_reliability_analysis.ipynb  team_review_consensus.csv
data/humanLabel/seeds/: aita_seed.jsonl  scenario_seed.jsonl
data/models/: Models.md  benchmark_models.json  llm_labeling_models.json
data/prompts/: README.md  rent_scenario.json  sycophancy_scoring.json
docs/: pipeline.md
outputs/raw/: grid.jsonl
outputs/runs/: run_analysis.ipynb  sample_for_labeling.ipynb
outputs/runs/1760110764/: run.jsonl  run_grid.json  run_scored.csv  run_scored.jsonl
outputs/runs/1760158358/: run.jsonl  run_grid.json  run_scored.csv  run_scored.jsonl
outputs/runs/1762359042/: run.jsonl  run_grid.json
outputs/runs/run_2fd32deccbc3905b/: analysis_summary_models.csv  analysis_summary_prompts.csv  grid.jsonl  sampled_run.csv  sampled_run.jsonl
scripts/: README.md  ai_label.py  build_benchmark.py  data_portal.py  eval_benchmark.py  get_sycophancy_score.py  run_benchmark.py  score_sycophancy.py
slurm/: README.md  job_benchmark.sbatch  job_eval.sbatch  job_train_roberta.sbatch
src/: __init__.py
src/benchmark/: README.md
src/benchmark/core/: __init__.py  config.py  logging.py  models.py  rate_limit.py  retry.py  types.py
src/benchmark/prompts/: __init__.py  chat.py  generator.py  relationship.py  schema.py  triplets.py
src/benchmark/providers/: __init__.py  base.py  litellm_provider.py  openrouter_client.py
src/benchmark/reporting/: __init__.py  aggregate.py
src/benchmark/run/: __init__.py  runner_async.py
src/benchmark/scoring/: __init__.py  master.py  metrics.py
src/labeling_app/: README.md  __init__.py  app.py  settings.py  utils.py
src/labeling_app/core/: __init__.py  assignment.py  models.py
src/labeling_app/db/: __init__.py  libsql.py  queries.py
src/labeling_app/llm/: __init__.py  config.py  llm_scorer.py
src/labeling_app/workflows/: __init__.py  admin.py  exporting.py  seeding.py
src/scoring/: README.md
